OpenBioC/app/static/app/konstantina/css/style.css
/* scroll to top */

/* #back2Top {
    width: 40px;
    line-height: 40px;
    overflow: hidden;
    z-index: 999;
    display: none;
    cursor: pointer;
    -moz-transform: rotate(270deg);
    -webkit-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
    position: fixed;
    bottom: 50px;
    right: 0;
    background-color: #DDD;
    color: #555;
    text-align: center;
    font-size: 30px;
    text-decoration: none;
}
#back2Top:hover {
    background-color: #DDF;
    color: #000;
} */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ----------------------------------------------------------------------------- Splitter --------------------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

.splitter-container {
    color: #222;
    text-align: center;
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
}

.leftPanel {
    overflow: auto;
}

.rightPanel {
    overflow: auto;
}

.splitterShadow {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
    -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ----------------------------------------------------------------------------- Navbar ----------------------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

nav {
    color: black !important;
}

.brand-logo {
    left: 5px;
}

.imgAvatar {
    height: 34px;
    width: 34px;
    margin: 5px;
}

/* Sign up / Sign in Modal */

#signModal {
    max-width: 600px !important;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ---------------------------------------------------------------------- Search Filters Collapsible ---------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

#searchFiltersCollapsibleBody {
    border: none;
    padding-top: 0px;
    padding-bottom: 0px;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ------------------------------------------------------------------------ Accordion Collapsible ------------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

.customCollapsibleHeader {
    height: 55px;
    display: block;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ------------------------------------------------------------------------- Disabled Collapsible ------------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

.collapsible li.disabled .collapsible-body {
    display: none !important;
    /*or using id of the app to avoid the use of !important*/
}

.collapsible li.disabled .collapsible-header {
    background: rgb(221, 221, 221);
    cursor: not-allowed;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* -------------------------------------------------------------------- Badge Installation Collapsible -------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ---------------------------------------------------------------------------- Material Icons ---------------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* Instead of <script src="/static/app/jquery-3.3.1.min.js"></script> (see also #23) */

@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: url(/static/app/material-design-icons-3.0.1/iconfont/MaterialIcons-Regular.eot);
    /* For IE6-8 */
    src: local('Material Icons'), local('MaterialIcons-Regular'), url(/static/app/material-design-icons-3.0.1/iconfont/MaterialIcons-Regular.woff2) format('woff2'), url(/static/app/material-design-icons-3.0.1/iconfont/MaterialIcons-Regular.woff) format('woff'), url(/static/app/material-design-icons-3.0.1/iconfont/MaterialIcons-Regular.ttf) format('truetype');
}

.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    /* Preferred icon size */
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;
    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;
    /* Support for IE. */
    font-feature-settings: 'liga';
}

/* END OF #23 resolve */

.material-icons.md-18 {
    font-size: 18px;
}

.material-icons.md-24 {
    font-size: 24px;
}

.material-icons.md-36 {
    font-size: 36px;
}

.material-icons.md-48 {
    font-size: 48px;
}

.material-icons.md-red {
    color: #f44336;
}

.material-icons.md-red.md-inactive {
    color: #f44336;
}

.material-icons {
    vertical-align: middle;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ------------------------------------------------------------------------------- D3 example ----------------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

.line-chart {
    border: 1px solid lightgray;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ------------------------------------------------------------------------- Grid for Responsive Panels ------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

.gridRow1 {
    width: 8.33% !important;
}

.gridRow2 {
    width: 16.66% !important;
}

.gridRow3 {
    width: 25% !important;
}

.gridRow4 {
    width: 33.33% !important;
}

.gridRow5 {
    width: 41.66% !important;
}

.gridRow6 {
    width: 50% !important;
}

.gridRow7 {
    width: 58.33% !important;
}

.gridRow8 {
    width: 66.66% !important;
}

.gridRow9 {
    width: 75% !important;
}

.gridRow10 {
    width: 83.33% !important;
}

.gridRow11 {
    width: 91.66% !important;
}

.gridRow12 {
    width: 100% !important;
}

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ----------------------------------------------------------------------------- Buttons ---------------------------------------------------------------------------------------- */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* Button */

.col.s12>.btn {
    width: 100%;
}

/* Fixed action button */

.fixed-action-btn {
    right: auto;
    left: 23px;
}

.btnCollapsible {
    padding: 0px;
    top: -9px;
    margin: 0px !important;
}

.plusBtn {
    height: 22px;
    width: 23px;
    top: 0px;
    padding-left: 0px;
}

.plusIcon {
    margin-top: -15px;
    margin-left: -3px;
    margin-right: 0px !important;
}

.qaReplyBtn {
    padding: 4px;
    height: 19px;
    line-height: 12px;
}

/* .fixed-action-btn {
    float: right;
    position: relative;
    right: 5px;
    padding-top: 0px;
    bottom: 61px;
} */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

/* ------------------------------------------------------------------------ Pushpin with Scrollspy ------------------------------------------------------------------------------ */

/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */

#profileContent {
    float: right;
}

/* Class for when element is above threshold */

.pin-top {
    position: relative;
}

/* Class for when element is below threshold */

.pin-bottom {
    position: relative;
}

/* Class for when element is pinned */

.pinned {
    position: fixed !important;
}

#scrollspyMenu a.active {
    font-weight: 500;
    padding-left: 14px;
    border-left: 2px solid #ee6e73
}

/* Switch colors */

.switch label .lever {
    background-color: #84c7c1;
}

.switch label .lever:after {
    background-color: #26a69a;
}

